Allow dual-types to end up being "normal" playlists

When we prod at a dual-type (in this case, a PHP file), fix the
real parser in the special_types as well, not just in the dual-types.

Fixes parsing PHP scripts that generate XSPF playlists, such as:
http://startwars.org/dump/remote_xspf.php

https://bugzilla.gnome.org/show_bug.cgi?id=590722