plparse/tests/parser.c
@@ -454,6 +454,17 @@ test_parsing_not_asx_playlist (void)
 	g_free (uri);
 }
 
+static void
+test_parsing_not_really_php (void)
+{
+	char *uri;
+	g_test_bug ("590722");
+	/* File from http://startwars.org/dump/remote_xspf.php */
+	uri = get_relative_uri (TEST_SRCDIR "remote_xspf.php");
+	g_assert (simple_parser_test (uri) == TOTEM_PL_PARSER_RESULT_SUCCESS);
+	g_free (uri);
+}
+
 #define MAX_DESCRIPTION_LEN 128
 #define DATE_BUFSIZE 512
 #define PRINT_DATE_FORMAT "%Y-%m-%dT%H:%M:%SZ"
@@ -620,6 +631,7 @@ main (int argc, char *argv[])
 		g_test_add_func ("/parser/parsing/live_streaming", test_parsing_live_streaming);
 		g_test_add_func ("/parser/parsing/xml_mixed_cdata", test_parsing_xml_mixed_cdata);
 		g_test_add_func ("/parser/parsing/not_asx_playlist", test_parsing_not_asx_playlist);
+		g_test_add_func ("/parser/parsing/not_really_php", test_parsing_not_really_php);
 
 		return g_test_run ();
 	}
